[package]
name = "prometheus_podman_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0" }
clap = { version="3", features=["derive"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
lazy_static = "1"
podman-api = "0.3"
prometheus = "0.13.1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }
